--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-  <!-- <link rel="stylesheet" href="style/style.css" /> -->
-  <!-- <script src="javascript/script.js" defer></script> -->
-  <script>const menuToggle = document.getElementById('menu-toggle');
+  <link rel="stylesheet" href="style/style.css" />
+  <script src="javascript/script.js" defer></script>
+<!--   <script>const menuToggle = document.getElementById('menu-toggle');
 const sidebar = document.getElementById('sidebar');
 menuToggle.addEventListener('click', () => {
   sidebar.classList.toggle('active');
@@ -167,7 +167,7 @@ footer {
   padding: 30px 20px;
   font-size: 0.95em;
 }
-</style>
+</style> -->
 </head>
 <body>
 
